# connectapi

./: .env.example  .gitignore  README.md  build.sh  manage.py  pyproject.toml
authentication/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
connectapi/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
